fixed scrollbar

--- a/src/components/vars.css
+++ b/src/components/vars.css
@@ -30,9 +30,9 @@
 	--scrollbar-thin-thumb: #202225;
 	--scrollbar-thin-track: transparent;
 	--scrollbar-auto-thumb: #202225;
-	--scrollbar-auto-track: #2E3338;
+	--scrollbar-auto-track: #2B2D31;
 	--scrollbar-auto-scrollbar-color-thumb: #202225;
-	--scrollbar-auto-scrollbar-color-track: #2f3136;
+	--scrollbar-auto-scrollbar-color-track: #2B2D31;
 	--elevation-stroke: 0 0 0 1px #04040526;
 	--elevation-low: 0 1px 0 #04040533, 0 1.5px 0 #0606070d, 0 2px 0 #0404050d;
 	--elevation-medium: 0 4px 4px #00000029;
